# melonDS

./: CMakeLists.txt  build.sh  devkitpro.nix  shell.nix
.devcontainer/: devcontainer.json
cmake/: Toolchain-cross-Switch.cmake
src/: ARMJIT_Memory.cpp  CMakeLists.txt  DMA.cpp  GPU.cpp  GPU.h  GPU2D.cpp  GPU2D.h  GPU2D_Deko.cpp  GPU2D_Deko.h  GPU2D_NeonSoft.cpp  GPU2D_NeonSoft.h  GPU2D_Soft.cpp  GPU2D_Soft.h  GPU3D.cpp  GPU3D.h  GPU3DGX_Neon.cpp  GPU3D_Deko.cpp  GPU3D_Deko.h  GPU3D_Transform.cpp  NDS.cpp  NonStupidBitfield.h
src/frontend/: FrontendUtil.h  Util_Audio.cpp  Util_ROM.cpp
src/frontend/switch/: BackButton.cpp  BackButton.h  BoxGui.cpp  BoxGui.h  CMakeLists.txt  CmdMemRing.h  Default_fsh.glsl  Default_vsh.glsl  ErrorDialog.cpp  ErrorDialog.h  FaultHandler.cpp  FaultHandler.h  Filebrowser.cpp  Filebrowser.h  Gfx.cpp  Gfx.h  GpuMemHeap.cpp  GpuMemHeap.h  KeyExplanations.cpp  KeyExplanations.h  Platform.cpp  PlatformConfig.cpp  PlatformConfig.h  Profiler.h  ROMMetaDatabase.cpp  ROMMetaDatabase.h  SettingsDialog.cpp  SettingsDialog.h  SmoothEdges_fsh.glsl  StartMenu.cpp  StartMenu.h  Style.h  UploadBuffer.cpp  UploadBuffer.h  compat_switch.h  main.cpp  main.h
src/frontend/switch/mm_vec/: mm_vec.c
src/shaders/: BGAffine_fsh.glsl  BGText_fsh.glsl  BinCombined.glsl  ComposeBGOBJ_fsh.glsl  FullscreenQuad_vsh.glsl  GPU3D_Comp.glsl  InterpXSpans.glsl  OBJ_fsh.glsl  OBJ_vsh.glsl
